--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "yarn build && git add . && git commit -m '...' && git push"
   },
   "dependencies": {
     "cytoscape-d3-force": "^1.1.4",
