--- a/posts/.obsidian/workspace
+++ b/posts/.obsidian/workspace
@@ -6,12 +6,12 @@
       {
         "id": "ba2b426490a0a575",
         "type": "leaf",
-        "dimension": 52.15493726132025,
+        "dimension": 48.22592324402607,
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes-tr/istnabulprivatetransfers/services/istanbul-cruise-port.md",
+            "file": "notes-tr/seabluetours/blog-headers.md",
             "mode": "source"
           }
         },
@@ -20,11 +20,11 @@
       {
         "id": "7aa82793eba6e4fb",
         "type": "leaf",
-        "dimension": 47.84506273867975,
+        "dimension": 51.77407675597393,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes-tr/istnabulprivatetransfers/services/istanbul-cruise-port.md",
+            "file": "notes-tr/seabluetours/blog-headers.md",
             "mode": "preview"
           }
         },
@@ -84,7 +84,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes-tr/istnabulprivatetransfers/services/istanbul-cruise-port.md",
+                "file": "notes-tr/seabluetours/blog-headers.md",
                 "collapseAll": true,
                 "extraContext": true,
                 "sortOrder": "alphabetical",
@@ -108,18 +108,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 398.266845703125
+    "width": 316.2668762207031
   },
   "lastOpenFiles": [
-    "notes-tr/istnabulprivatetransfers/services/istanbul-cruise-port.md",
-    "notes-tr/istnabulprivatetransfers/tours/Untitled.md",
-    "notes-tr/istnabulprivatetransfers/airport-transfer/istanbul-city-transfer.md",
-    "notes-tr/istnabulprivatetransfers/transfer/istanbul-galata-port.md",
-    "notes-tr/istnabulprivatetransfers/airport-transfer/save-20-for-all-repeat-transfer-bookings.md",
+    "notes-tr/seabluetours/blog-headers.md",
+    "index.md",
+    "sidebar.md",
+    "notes-tr/istanbulprivatetransfers/airport-transfer/istanbul-primeclass-welcome.md",
+    "notes-tr/istanbulprivatetransfers/index.md",
+    "notes-tr/istanbulprivatetransfers/airport-transfer/save-20-for-all-repeat-transfer-bookings.md",
+    "notes-tr/istanbulprivatetransfers/booking.md",
+    "notes-tr/istanbulprivatetransfers/home.md",
     "notes-tr/istnabulprivatetransfers/airport-transfer/istanbul-primeclass-welcome.md",
-    "notes-tr/istnabulprivatetransfers/airport-transfer/istanbul-airport-transfer.md",
-    "notes-tr/istnabulprivatetransfers/airport-transfer/airport-services.md",
-    "notes-tr/istnabulprivatetransfers/airport-transfer/Untitled.md",
-    "notes-tr/istnabulprivatetransfers/Untitled.md"
+    "notes-tr/istnabulprivatetransfers/index.md"
   ]
 }
