--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.2",
     "jsnetworkx": "^0.3.4",
-    "next": "^10.0.0",
+    "next": "12",
     "path": "^0.12.7",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-folder-tree": "^5.0.3",
     "remark": "^13.0.0",
     "remark-collapse": "^0.1.2",
