--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
     "remark-wiki-link": "^1.0.0",
     "to-vfile": "^6.1.0",
     "unified": "^9.2.0",
-    "vfile-reporter": "^6.0.1"
+    "vfile-reporter": "^6.0.1",
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "@mui/lab": "latest"
   },
   "devDependencies": {
     "bimap": "^0.0.15",
