Refactor to prepare to convert to react component

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-folder-tree": "^5.0.3",
+    "rehype-react": "^7.0.4",
+    "rehype-stringify": "^9.0.3",
     "remark": "^13.0.0",
     "remark-collapse": "^0.1.2",
     "remark-external-links": "^8.0.0",
@@ -35,6 +37,7 @@
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
     "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-rehype": "^10.1.0",
     "remark-wiki-link": "^1.0.0",
     "to-vfile": "^6.1.0",
     "unified": "^9.2.0",
