--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.2",
     "jsnetworkx": "^0.3.4",
+    "mdast-util-to-string": "^3.1.0",
     "next": "12",
     "path": "^0.12.7",
     "react": "^17.0.2",
