--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-folder-tree": "^5.0.3",
     "rehype-react": "^7.0.4",
@@ -47,6 +48,8 @@
   "devDependencies": {
     "bimap": "^0.0.15",
     "cytoscape": "^3.17.0",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
     "remark-frontmatter": "^3.0.0",
     "remark-react": "^8.0.0",
     "remark-stringify": "^9.0.0",
