--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-folder-tree": "^5.0.3",
+    "rehype-prism-plus": "^1.3.2",
     "rehype-react": "^7.0.4",
     "rehype-stringify": "^9.0.3",
     "remark": "^13.0.0",
