--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 /.obsidian
 /.idea
-/.vscode
 /posts/.obsidian/
+/.vscode
+/.yarn
 
 # dependencies
 /node_modules
