--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "rm -rf graph-data.json && next dev",
+    "build": "rm -rf graph-data.json && next build",
     "start": "next start",
     "deploy": "yarn build && git add . && git commit -m '...' && git push"
   },
