--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-app",
+  "name": "volglass",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "rm -rf graph-data.json && next dev",
     "build": "rm -rf graph-data.json && next build",
     "start": "next start",
-    "deploy": "yarn build && git add . && git commit -m '...' && git push"
+    "deploy": "pnpm build && git add . && git commit -m '...' && git push"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -49,6 +50,15 @@
     "vfile-reporter": "^6.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@types/babel__core": "^7.20.0",
+    "@types/cytoscape": "^3.19.9",
+    "@types/d3": "^6.7.5",
+    "@types/eslint": "8.4.10",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^17.0.18",
+    "@types/uuid": "^8.3.4",
     "bimap": "^0.0.15",
     "cytoscape": "^3.17.0",
     "eslint": "8.13.0",
@@ -56,6 +66,9 @@
     "remark-frontmatter": "^3.0.0",
     "remark-react": "^8.0.0",
     "remark-stringify": "^9.0.0",
+    "typescript": "^4.9.4",
+    "typesync": "^0.9.2",
     "uuid": "^8.3.2"
-  }
+  },
+  "packageManager": "pnpm@7.25.0"
 }
