--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "rm -rf graph-data.json && next dev",
-    "build": "rm -rf graph-data.json && next build",
+    "dev": "next dev",
+    "windev": "next dev",
+    "build": "next build",
     "start": "next start",
     "deploy": "pnpm build && git add . && git commit -m '...' && git push"
   },
@@ -25,7 +26,7 @@
     "gray-matter": "^4.0.2",
     "jsnetworkx": "^0.3.4",
     "mdast-util-to-string": "^3.1.0",
-    "next": "12",
+    "next": "^12.1.0",
     "next-plausible": "^3.1.9",
     "path": "^0.12.7",
     "react": "^17.0.2",
