--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "d3": "^6.2.0",
     "directory-tree": "^3.2.2",
     "fs": "^0.0.1-security",
+    "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.2",
     "jsnetworkx": "^0.3.4",
     "mdast-util-to-string": "^3.1.0",
     "next": "^12.1.0",
-    "next-plausible": "^3.1.9",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-cytoscapejs": "^1.2.1",
@@ -66,6 +66,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "autoprefixer": "^10.4.13",
     "bimap": "^0.0.15",
     "cytoscape": "^3.17.0",
     "eslint": "8.13.0",
@@ -76,10 +77,14 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-tailwindcss": "^3.8.3",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "remark-frontmatter": "^3.0.0",
     "remark-react": "^8.0.0",
     "remark-stringify": "^9.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "typesync": "^0.9.2",
     "uuid": "^8.3.2"
