--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "latest",
     "@mui/lab": "latest",
     "@mui/material": "latest",
+    "@mui/system": "^5.11.8",
     "@types/wanakana": "^4.0.3",
     "cytoscape-d3-force": "^1.1.4",
     "cytoscape-node-html-label": "^1.2.1",
@@ -28,6 +29,7 @@
     "fs": "^0.0.1-security",
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.2",
+    "jotai": "^2.0.1",
     "jsnetworkx": "^0.3.4",
     "mdast-util-to-string": "^3.1.0",
     "next": "^12.1.0",
