--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "volglass",
-  "version": "0.2.1-hotfix",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
